hide overflowx and fix aboutme positioning

--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,8 @@ body{
     font-family:'Roboto Mono';
     color:white;
     overflow: scroll;
+    overflow-x: hidden;
+    //width: 100%;
 }
 
 a {
@@ -149,6 +151,7 @@ section.about{
         text-align: left;
         margin-top: 1em;
         margin-bottom: 2em;
+        margin-left: .8em;
         font-size:.8rem;
         a{
             all: unset;
@@ -173,12 +176,13 @@ section.about{
         text-align: left;
         font-size: .8rem;
         line-height: 2em;
+        margin-left: .8em;
         .dotdot{
             font-weight: bold;
             font-size: .9rem;
         }
         .list{
-            margin-left: 1em;
+            margin-left: 1.8em;
 
             span{
                 color:#D0D33C;
